# ikarus

.github/workflows/: benchmark.yml
ikarus/finiteelements/mechanics/: CMakeLists.txt  enhancedassumedstrains.hh  linearelastic.hh  materials.hh  nonlinearelastic.hh  nonlinearenhancedassumedstrains.hh
ikarus/python/test/: 2d.msh  linearelastictest.py  test.py  testtruss.py  truss.msh
sandbox/: CMakeLists.txt
sandbox/benchmarks/: CMakeLists.txt  benchmark.cpp
sandbox/geometries/: 2d.msh
sandbox/python/: helpers.py  materials.py  nonlinear.py  nonlinearBC.py  test.py
sandbox/src/: sandbox.cpp
tests/src/: testnonlineareas.cpp
